--- a/config-client-consumer/src/main/resources/bootstrap.yml
+++ b/config-client-consumer/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
         config:
             label: master
             uri: http://localhost:8802
-            name: author,config-info,default
+            name: test,default
