--- a/config-client-consumer/src/main/resources/application.yml
+++ b/config-client-consumer/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 spring:
   application:
     name: config-client-consumer
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9900/eureka
 server:
   port: 8803
